fix: fixed dark mode issues

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -67,3 +67,7 @@ html {
 .dark img {
   filter: invert(1);
 }
+
+.dark .profile-picture {
+  filter: none;
+}
